// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WriteTransactionBuilder > handles transaction with failing conditions 1`] = `[TransactionCanceledException: Transaction cancelled, please refer cancellation reasons for specific reasons [ConditionalCheckFailed]]`;

exports[`WriteTransactionBuilder > handles transaction with puts 1`] = `
[
  {
    "dataTimestamp": 1,
    "userId": "9999",
  },
  {
    "dataTimestamp": 2,
    "userId": "9999",
  },
]
`;

exports[`WriteTransactionBuilder > handles transaction with updates 1`] = `
[
  {
    "dataTimestamp": 1,
    "someBoolean": true,
    "userId": "9999",
  },
  {
    "dataTimestamp": 2,
    "tags": [
      "a",
      "b",
      "c",
    ],
    "userId": "9999",
  },
]
`;
